# multi-agent-marketing-system

./: .gitignore  LICENSE  README.md
deployment/docker/: docker-compose.yml
orchestrator/: pyproject.toml
services/agent_ad_gateway/: pyproject.toml
services/agent_ad_gateway/src/: main.py
services/agent_content_crew/: .env.example  pyproject.toml
services/agent_content_crew/src/: agents.py  crew.py  main.py
services/agent_content_crew/src/cli/: brief_collector.py  cli.py
services/agent_content_crew/src/config/: agents.yaml  logger.py  settings.py  tasks.yaml
services/agent_content_crew/src/models/: content_models.py  validation_models.py
services/agent_content_crew/src/tools/: search_tools.py  storage_tools.py
services/agent_content_crew/src/utils/: crew_runner.py
services/agent_landing_page_dev/: pyproject.toml
services/agent_landing_page_dev/src/: main.py
